xserver modeset pageflip fails
Submitted by Jos van Wolput
Assigned to Xorg Project Team
Link to original bug (#106908)
Description
Created attachment 140147 Xorg.0.log with modeset error
I am using an Intel Ivybridge Mobile laptop with the git version of xserver.
When Option "PageFlip" is enabled (which is by default)I get the following repeated error in xorg.log:
(EE) modeset(0): Failed to get GBM bo for flip to new front. (EE) modeset(0): present flip failed
No such errors when page flipping is disabled in xorg.conf.
Same issue when using xorg-server-1.20.0.
Please see the attached xorg.log.
Attachment 140147, "Xorg.0.log with modeset error":
Xorg.0.log
Version: git